--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   api:
     build: 
@@ -8,10 +6,10 @@ services:
     ports:
       - "8001:8001"
     volumes:
+      - ./peachme_fastapi:/app  # Mount the code for hot reload
       - ./peachme_fastapi/media:/app/media
       - ./peachme_fastapi/peachme.db:/app/peachme.db
       - ./.env:/app/.env
-      - ./peachme_fastapi:/app  # Mount the code for hot reload
     environment:
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - LANGCHAIN_API_KEY=${LANGCHAIN_API_KEY}
@@ -27,7 +25,12 @@ services:
       dockerfile: Dockerfile.frontend
     ports:
       - "3000:3000"
+    volumes:
+      - .:/app  # Mount the code for hot reload
+      - /app/node_modules  # Don't override node_modules
+      - /app/.next  # Don't override Next.js build
     environment:
       - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
+    command: npm run dev  # Run in development mode
     depends_on:
       - api 
